--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -7,18 +7,18 @@
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="" method="post">
+                        <form id="login-form" class="form" enctype="application/x-www-form-urlencoded" method="POST" action="/api/login">
                             <h3 class="text-center text-warning">Login</h3>
                             <div class="form-group">
-                                <label for="username" class="text-warning">Username:</label><br>
-                                <input type="text" name="username" id="username" class="form-control">
+                                <label for="email" class="text-warning">Email:</label><br>
+                                <input type="text" name="email" id="email" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-warning">Password:</label><br>
-                                <input type="text" name="password" id="password" class="form-control">
+                                <input type="password" name="password" id="password" class="form-control">
                             </div>
                             <div class="form-group">
-                                <input type="submit" name="submit" class="btn btn-warning btn-md col-12" value="submit">
+                                <input type="submit" id="btn-login" name="submit" class="btn btn-warning btn-md col-12" value="submit">
                             </div>
                             <div id="register-link" class="text-center">
                                 <a href="/register" class="text-warning">Don't Have a Account? Register here</a>
@@ -30,4 +30,36 @@
         </div>
 </div>
 
+<!-- <script>
+    const form = document.getElementById('login-form')
+    form.addEventListener('submit', login);
+
+    async function login(event){
+        event.preventDefault();
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        console.log([email, password]);
+
+        const result = await fetch('http://localhost:3000/api/login', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                email,
+                password
+            })
+        }).then( (res) => res.json());
+        console.log(result);
+
+        if(result.status === 'ok'){
+            // everything all ok
+            console.log('Got the token: ', result.data);
+            localStorage.setItem('token', result.data)
+            alert('success');
+        } else{
+            alert(result.message);
+        }
+    };
+</script> -->
 <%- include('../include/frontend/layouts/partials/_footer.ejs') %>
